# cabin

./: .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  Makefile  README.md  RELEASING.md  SECURITY.md  cabin.toml  demo.tape  dist-workspace.toml  index.html  mkdocs.yml  ports  typos.toml
crates/cabin-artifact/: Cargo.toml
crates/cabin-artifact/src/: cache.rs  error.rs  extract.rs  fetch.rs  lib.rs  model.rs
crates/cabin-artifact/tests/: hostile_archives.rs  package_round_trip.rs
crates/cabin-build/: Cargo.toml
crates/cabin-build/src/: action.rs  check.rs  clean.rs  error.rs  graph.rs  lib.rs  link_diagnostics.rs  lower.rs  planner.rs  standard_compat.rs  validate.rs
crates/cabin-build/src/planner/: lowering.rs  mod.rs  tests.rs
crates/cabin-cli/: Cargo.toml  build.rs
crates/cabin-cli/src/: cli.rs  command_list.rs  config_glue.rs  diagnostic_registry.rs  env_flags_glue.rs  error_rendering.rs  explain_glue.rs  fetch_output_glue.rs  fmt_glue.rs  help_rendering.rs  lib.rs  main.rs  metadata_glue.rs  ninja_glue.rs  patch_glue.rs  port_glue.rs  port_subcommand.rs  run_glue.rs  source_tooling_glue.rs  system_deps_glue.rs  term_color_glue.rs  term_setup.rs  term_verbosity_glue.rs  test_glue.rs  tidy_glue.rs  tree_glue.rs  vendor_glue.rs  version_glue.rs  version_info.rs
crates/cabin-cli/tests/: cli.rs
crates/cabin-config/: Cargo.toml
crates/cabin-config/src/: discovery.rs  effective.rs  error.rs  lib.rs  parse.rs  raw.rs  source.rs
crates/cabin-core/: Cargo.toml
crates/cabin-core/src/: build_flags.rs  build_jobs.rs  compiler.rs  compiler_wrapper.rs  condition.rs  config.rs  config_source.rs  coverage.rs  error.rs  experimental.rs  hash.rs  index_standards.rs  language_standard.rs  lib.rs  lint.rs  model.rs  patch.rs  process.rs  profile.rs  registry.rs  source_language.rs  source_replacement.rs  standard_compatibility.rs  term_color.rs  term_verbosity.rs  toolchain.rs  version_req.rs
crates/cabin-core/src/compiler/: capabilities.rs  identity.rs  mod.rs  parsing.rs  report.rs  tests.rs  validation.rs
crates/cabin-credentials/: Cargo.toml
crates/cabin-credentials/src/: lib.rs
crates/cabin-diagnostics/: Cargo.toml
crates/cabin-diagnostics/src/: lib.rs
crates/cabin-driver/: Cargo.toml
crates/cabin-driver/src/: action.rs  dialect.rs  lib.rs  lower.rs
crates/cabin-env/: Cargo.toml
crates/cabin-env/src/: build_flags.rs  lib.rs
crates/cabin-explain/: Cargo.toml
crates/cabin-explain/src/: lib.rs
crates/cabin-feature/: Cargo.toml
crates/cabin-feature/src/: lib.rs  tests.rs
crates/cabin-fmt/: Cargo.toml
crates/cabin-fmt/src/: lib.rs
crates/cabin-fmt/tests/: fake_formatter.rs
crates/cabin-fs/: Cargo.toml
crates/cabin-fs/src/: lib.rs  path.rs
crates/cabin-index/: Cargo.toml
crates/cabin-index-http/: Cargo.toml
crates/cabin-index-http/src/: client.rs  error.rs  lib.rs  source.rs
crates/cabin-index/src/: error.rs  lib.rs  loader.rs  model.rs
crates/cabin-lockfile/: Cargo.toml
crates/cabin-lockfile/src/: error.rs  io.rs  lib.rs  model.rs  validate.rs
crates/cabin-manifest/: Cargo.toml
crates/cabin-manifest/src/: edit.rs  error.rs  lib.rs  parse.rs  raw.rs  span.rs
crates/cabin-manifest/src/parse/: build.rs  dependency.rs  mod.rs  profile.rs  target.rs  tests.rs
crates/cabin-ninja/: Cargo.toml
crates/cabin-ninja/src/: compile_commands.rs  error.rs  lib.rs  writer.rs
crates/cabin-ninja/tests/: fake_ninja.rs
crates/cabin-package/: Cargo.toml
crates/cabin-package/src/: archive.rs  error.rs  lib.rs  metadata.rs  scaffold.rs  validate.rs
crates/cabin-port/: Cargo.toml  build.rs  ports
crates/cabin-port/ports/: README.md
crates/cabin-port/src/: builtin.rs  cache.rs  error.rs  lib.rs  model.rs  parse.rs  prepare.rs
crates/cabin-publish/: Cargo.toml
crates/cabin-publish/src/: dry_run.rs  error.rs  lib.rs  lints.rs  registry.rs
crates/cabin-registry-api/: Cargo.toml
crates/cabin-registry-api/src/: lib.rs
crates/cabin-registry-file/: Cargo.toml
crates/cabin-registry-file/src/: atomic.rs  error.rs  index.rs  layout.rs  lib.rs  lock.rs  publish.rs
crates/cabin-registry-verify/: Cargo.toml
crates/cabin-registry-verify/src/: consistency.rs  lib.rs  limits.rs  main.rs  names.rs  scan.rs
crates/cabin-registry-verify/tests/: advise.rs  verify.rs
crates/cabin-resolver/: Cargo.toml
crates/cabin-resolver/src/: error.rs  explanation.rs  input.rs  lib.rs  locked.rs  output.rs  preflight.rs  provider.rs  range.rs
crates/cabin-source-discovery/: Cargo.toml
crates/cabin-source-discovery/src/: lib.rs
crates/cabin-system-deps/: Cargo.toml
crates/cabin-system-deps/src/: lib.rs
crates/cabin-system-deps/tests/: fake_pkg_config.rs
crates/cabin-test/: Cargo.toml
crates/cabin-test/src/: lib.rs
docs/: fmt.md  (+32 more)
registry/: .gitignore  Cargo.toml  README.md  migrations-applied  wrangler.jsonc
registry/docs/: architecture.md  archive-format.md  runbook.md  verification.md
registry/migrations/: 0001_init.sql  0002_quotas.sql  0003_backup.sql  0004_verification.sql  0005_launch.sql  0006_identity.sql  0007_member_roles.sql  0008_downloads.sql
registry/scripts/: backfill-0002.sh  backup-audit.sh  backup-backfill.sh  backup-prune.sh  backup-verify-dump.sh  check-deploy.sh  check-r2.pl  check-r2.sh  check-sql.pl  check-sql.sh  diagnose.sh  gen-fixtures.sh  governor.sh  launch-guard.sh  lexical.pm  lib.sh  migrate.sh  restore-drill.sh  smoke.sh  test-backup-scripts.sh  wipe.sh
registry/src/: allowlist.rs  analytics.rs  auth.rs  backup.rs  backup_glue.rs  breaker.rs  claim.rs  documents.rs  error.rs  glue.rs  governor.rs  governor_client.rs  governor_do.rs  lib.rs  names.rs  pages.rs  publish.rs  quota.rs  routes.rs  session.rs  source.rs  sql.rs  stats.rs  telemetry.rs  user_api.rs  verify.rs  web_glue.rs
registry/tests/: check_deploy_guard.rs  check_r2_guard.rs  check_sql_guard.rs  docs_drift.rs  launch_guard.rs  publish_validation.rs  sql_validation.rs
registry/tests/common/: mod.rs
registry/tests/fixtures/: smoke-withdep-0.2.0.json  withdep-0.2.0.json
(+555 files in other folders)
