[workspace]
resolver = "3"
members = [
    "crates/cabin-artifact",
    "crates/cabin-build",
    "crates/cabin-cli",
    "crates/cabin-config",
    "crates/cabin-core",
    "crates/cabin-diagnostics",
    "crates/cabin-env",
    "crates/cabin-explain",
    "crates/cabin-feature",
    "crates/cabin-fmt",
    "crates/cabin-index",
    "crates/cabin-index-http",
    "crates/cabin-lockfile",
    "crates/cabin-manifest",
    "crates/cabin-ninja",
    "crates/cabin-package",
    "crates/cabin-publish",
    "crates/cabin-registry-file",
    "crates/cabin-resolver",
    "crates/cabin-source-discovery",
    "crates/cabin-system-deps",
    "crates/cabin-test",
    "crates/cabin-tidy",
    "crates/cabin-toolchain",
    "crates/cabin-vendor",
    "crates/cabin-workspace",
]
default-members = ["crates/cabin-cli"]

[workspace.package]
version = "0.14.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cabinpkg/cabin"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
clap_complete = "4"
clap_mangen = "0.3"
annotate-snippets = "0.12"
flate2 = "1"
miette = { version = "7" }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tar = "0.4"
termcolor = "1"
thiserror = "1"
tiny_http = "0.12"
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["tls"] }
url = "2"

cabin-artifact = { path = "crates/cabin-artifact" }
cabin-build = { path = "crates/cabin-build" }
cabin-config = { path = "crates/cabin-config" }
cabin-core = { path = "crates/cabin-core" }
cabin-diagnostics = { path = "crates/cabin-diagnostics" }
cabin-env = { path = "crates/cabin-env" }
cabin-explain = { path = "crates/cabin-explain" }
cabin-feature = { path = "crates/cabin-feature" }
cabin-fmt = { path = "crates/cabin-fmt" }
cabin-index = { path = "crates/cabin-index" }
cabin-index-http = { path = "crates/cabin-index-http" }
cabin-lockfile = { path = "crates/cabin-lockfile" }
cabin-manifest = { path = "crates/cabin-manifest" }
cabin-ninja = { path = "crates/cabin-ninja" }
cabin-package = { path = "crates/cabin-package" }
cabin-publish = { path = "crates/cabin-publish" }
cabin-registry-file = { path = "crates/cabin-registry-file" }
cabin-resolver = { path = "crates/cabin-resolver" }
cabin-source-discovery = { path = "crates/cabin-source-discovery" }
cabin-system-deps = { path = "crates/cabin-system-deps" }
cabin-test = { path = "crates/cabin-test" }
cabin-tidy = { path = "crates/cabin-tidy" }
cabin-toolchain = { path = "crates/cabin-toolchain" }
cabin-vendor = { path = "crates/cabin-vendor" }
cabin-workspace = { path = "crates/cabin-workspace" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }

[profile.release]
lto = "thin"
