[workspace]
resolver = "3"
members = [
  "crates/cabin",
  "crates/cabin-artifact",
  "crates/cabin-build",
  "crates/cabin-config",
  "crates/cabin-core",
  "crates/cabin-diagnostics",
  "crates/cabin-driver",
  "crates/cabin-env",
  "crates/cabin-explain",
  "crates/cabin-feature",
  "crates/cabin-fmt",
  "crates/cabin-fs",
  "crates/cabin-index",
  "crates/cabin-index-http",
  "crates/cabin-lockfile",
  "crates/cabin-manifest",
  "crates/cabin-ninja",
  "crates/cabin-package",
  "crates/cabin-port",
  "crates/cabin-publish",
  "crates/cabin-registry-file",
  "crates/cabin-resolver",
  "crates/cabin-source-discovery",
  "crates/cabin-system-deps",
  "crates/cabin-test",
  "crates/cabin-tidy",
  "crates/cabin-toolchain",
  "crates/cabin-vendor",
  "crates/cabin-workspace",
]
default-members = ["crates/cabin"]

[workspace.package]
version = "0.17.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cabinpkg/cabin"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
assert_fs = "1"
atomic-write-file = "0.3"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
clap_complete = "4"
clap_mangen = "0.3"
annotate-snippets = "0.12"
flate2 = "1"
miette = { version = "7", default-features = false }
pubgrub = "0.4"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
shlex = "2"
tar = "0.4"
termcolor = "1"
thiserror = "2"
tiny_http = "0.12"
toml = { version = "1.1", features = ["preserve_order"] }
toml_edit = "0.25"
dunce = "1"
etcetera = "0.11"
find-msvc-tools = "0.1"
ureq = { version = "2", default-features = false, features = ["tls"] }
url = "2"
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }

cabin-artifact = { package = "cabinpkg-artifact", path = "crates/cabin-artifact", version = "0.17.0" }
cabin-build = { package = "cabinpkg-build", path = "crates/cabin-build", version = "0.17.0" }
cabin-config = { package = "cabinpkg-config", path = "crates/cabin-config", version = "0.17.0" }
cabin-core = { package = "cabinpkg-core", path = "crates/cabin-core", version = "0.17.0" }
cabin-diagnostics = { package = "cabinpkg-diagnostics", path = "crates/cabin-diagnostics", version = "0.17.0" }
cabin-driver = { package = "cabinpkg-driver", path = "crates/cabin-driver", version = "0.17.0" }
cabin-env = { package = "cabinpkg-env", path = "crates/cabin-env", version = "0.17.0" }
cabin-explain = { package = "cabinpkg-explain", path = "crates/cabin-explain", version = "0.17.0" }
cabin-feature = { package = "cabinpkg-feature", path = "crates/cabin-feature", version = "0.17.0" }
cabin-fmt = { package = "cabinpkg-fmt", path = "crates/cabin-fmt", version = "0.17.0" }
cabin-fs = { package = "cabinpkg-fs", path = "crates/cabin-fs", version = "0.17.0" }
cabin-index = { package = "cabinpkg-index", path = "crates/cabin-index", version = "0.17.0" }
cabin-index-http = { package = "cabinpkg-index-http", path = "crates/cabin-index-http", version = "0.17.0" }
cabin-lockfile = { package = "cabinpkg-lockfile", path = "crates/cabin-lockfile", version = "0.17.0" }
cabin-manifest = { package = "cabinpkg-manifest", path = "crates/cabin-manifest", version = "0.17.0" }
cabin-ninja = { package = "cabinpkg-ninja", path = "crates/cabin-ninja", version = "0.17.0" }
cabin-package = { package = "cabinpkg-package", path = "crates/cabin-package", version = "0.17.0" }
cabin-port = { package = "cabinpkg-port", path = "crates/cabin-port", version = "0.17.0" }
cabin-publish = { package = "cabinpkg-publish", path = "crates/cabin-publish", version = "0.17.0" }
cabin-registry-file = { package = "cabinpkg-registry-file", path = "crates/cabin-registry-file", version = "0.17.0" }
cabin-resolver = { package = "cabinpkg-resolver", path = "crates/cabin-resolver", version = "0.17.0" }
cabin-source-discovery = { package = "cabinpkg-source-discovery", path = "crates/cabin-source-discovery", version = "0.17.0" }
cabin-system-deps = { package = "cabinpkg-system-deps", path = "crates/cabin-system-deps", version = "0.17.0" }
cabin-test = { package = "cabinpkg-test", path = "crates/cabin-test", version = "0.17.0" }
cabin-tidy = { package = "cabinpkg-tidy", path = "crates/cabin-tidy", version = "0.17.0" }
cabin-toolchain = { package = "cabinpkg-toolchain", path = "crates/cabin-toolchain", version = "0.17.0" }
cabin-vendor = { package = "cabinpkg-vendor", path = "crates/cabin-vendor", version = "0.17.0" }
cabin-workspace = { package = "cabinpkg-workspace", path = "crates/cabin-workspace", version = "0.17.0" }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"

[profile.release]
lto = "thin"
