[package]
name = "cabin-registry-worker"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cabinpkg/cabin"
description = "Hosted sparse HTTP registry service for Cabin, as a Cloudflare Worker."
publish = false

# Standalone workspace: keeps the wasm32-targeted dependency tree and its
# lockfile out of the root Cargo workspace (see docs/architecture.md).
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hmac = "0.13"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-util = "0.3"
worker = { version = "0.8", features = ["d1"] }

# Host-target only: tests/sql_validation.rs prepares every executed
# statement (src/sql.rs) against the real migrated schema, and the
# names module's parity test pins its mirrored DOS device stems to
# cabin-fs's shared predicate. The wasm build never sees either.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cabinpkg-fs = { path = "../crates/cabin-fs" }
rusqlite = { version = "0.40", features = ["bundled"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
