[package]
name = "cabin-artifact"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local source-archive cache, checksum verifier, and safe extractor for Cabin."

[dependencies]
cabin-core = { workspace = true }
cabin-manifest = { workspace = true }
flate2 = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

