[package]
name = "cabinpkg-artifact"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local source-archive cache, checksum verifier, and safe extractor for Cabin."

[lib]
name = "cabin_artifact"

[dependencies]
cabin-core = { workspace = true }
cabin-fs = { workspace = true }
cabin-manifest = { workspace = true }
flate2 = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
predicates = "3"
