[package]
name = "cabinpkg-artifact"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Source-archive cache and safe extractor for Cabin"

[lib]
name = "cabin_artifact"

[dependencies]
cabin-core = { workspace = true }
cabin-fs = { workspace = true }
cabin-manifest = { workspace = true }
flate2 = { workspace = true }
semver = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
cabin-package = { workspace = true }
predicates = "3"

[lints]
workspace = true
