[package]
name = "cabinpkg-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Backend-independent build graph planner for Cabin."

[lib]
name = "cabin_build"

[dependencies]
cabin-core = { workspace = true }
cabin-workspace = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
predicates = "3"
semver = { workspace = true }
