[package]
name = "cabin-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Typed configuration files for Cabin: discovery, parsing, merging, and effective config."

[dependencies]
cabin-core = { path = "../cabin-core" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"

