[package]
name = "cabinpkg-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Typed configuration files for Cabin: discovery, parsing, merging, and effective config."

[lib]
name = "cabin_config"

[dependencies]
cabin-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
xdg = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
