[package]
name = "cabinpkg-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Layered configuration loader for Cabin"

[lib]
name = "cabin_config"

[dependencies]
cabin-core = { workspace = true }
camino = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
