[package]
name = "cabinpkg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stable internal data model for the Cabin package manager and build system"

[lib]
name = "cabin_core"

[dependencies]
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
