[package]
name = "cabinpkg-credentials"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Registry credential storage for Cabin"

[lib]
name = "cabin_credentials"

[dependencies]
atomic-write-file = { workspace = true }
cabin-env = { workspace = true }
etcetera = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
