[package]
name = "cabin-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "User-facing diagnostic codes and presentation layer for Cabin's typed domain errors."

[dependencies]
cabin-core = { workspace = true }
miette = { workspace = true }
termcolor = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
