[package]
name = "cabinpkg-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "User-facing diagnostic codes and presentation layer for Cabin's typed domain errors."

[lib]
name = "cabin_diagnostics"

[dependencies]
cabin-core = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
termcolor = { workspace = true }

[dev-dependencies]
miette = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
