[package]
name = "cabinpkg-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "User-facing error diagnostics for Cabin"

[lib]
name = "cabin_diagnostics"

[dependencies]
miette = { workspace = true, features = ["fancy"] }
termcolor = { workspace = true }

[dev-dependencies]
miette = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[lints]
workspace = true
