[package]
name = "cabinpkg-env"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CABIN_* environment variable name constants, package/target name canonicalization, and typed env builders for `cabin run` / `cabin test`"

[lib]
name = "cabin_env"

[dependencies]
shlex = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
