[package]
name = "cabinpkg-env"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Environment variable conventions for Cabin"

[lib]
name = "cabin_env"

[dependencies]
shlex = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
