[package]
name = "cabinpkg-explain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dependency-tree and explain views for Cabin"

[lib]
name = "cabin_explain"

[dependencies]
cabin-core = { workspace = true }
cabin-lockfile = { workspace = true }
cabin-workspace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
camino = { workspace = true }
semver = { workspace = true }

[lints]
workspace = true
