[package]
name = "cabin-feature"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cabin-core = { workspace = true }
cabin-workspace = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
semver = { workspace = true }

[lints]
workspace = true
