[package]
name = "cabinpkg-feature"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cross-package feature resolver for Cabin"

[lib]
name = "cabin_feature"

[dependencies]
cabin-core = { workspace = true }
cabin-workspace = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
camino = { workspace = true }
semver = { workspace = true }

[lints]
workspace = true
