[package]
name = "cabinpkg-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "clang-format runner used by Cabin's developer-tools commands."

[lib]
name = "cabin_fmt"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
cabin-source-discovery = { workspace = true }

# Tiny stand-in for `clang-format` used by the test suite. The
# real `clang-format` is not guaranteed to be on every developer's
# machine, so the unit / integration tests use this binary via
# `CABIN_FMT` to simulate write- and check-mode behavior
# deterministically. The bin is gated on the `test-fake-formatter`
# feature so end-user `cargo install cabinpkg-fmt` does not pull it in.
[features]
test-fake-formatter = []

[[bin]]
name = "cabin-fmt-fake-formatter"
path = "src/bin/fake_formatter.rs"
required-features = ["test-fake-formatter"]
