[package]
name = "cabinpkg-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Filesystem helpers for Cabin"

[lib]
name = "cabin_fs"

[dependencies]
atomic-write-file = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
