[package]
name = "cabin-index-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Sparse HTTP index client for Cabin (read-only static-registry consumer)."

[dependencies]
cabin-core = { workspace = true }
cabin-index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tiny_http = { workspace = true }

