[package]
name = "cabinpkg-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local JSON package index loader for Cabin"

[lib]
name = "cabin_index"

[dependencies]
cabin-core = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
