[package]
name = "cabin-lockfile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "cabin.lock reader, writer, and validator."

[dependencies]
cabin-core = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

