[package]
name = "cabinpkg-lockfile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "cabin.lock reader, writer, and validator"

[lib]
name = "cabin_lockfile"

[dependencies]
cabin-core = { workspace = true }
cabin-fs = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
