[package]
name = "cabin-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Parses cabin.toml into the Cabin internal project model."

[dependencies]
cabin-core = { workspace = true }
miette = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
