[package]
name = "cabinpkg-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Manifest parser for Cabin"

[lib]
name = "cabin_manifest"

[dependencies]
cabin-core = { workspace = true }
camino = { workspace = true }
miette = { workspace = true, features = ["derive"] }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

[lints]
workspace = true
