[package]
name = "cabinpkg-package"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Source-archive packaging and scaffolding for Cabin"

[lib]
name = "cabin_package"

[dependencies]
cabin-core = { workspace = true }
cabin-fs = { workspace = true }
cabin-manifest = { workspace = true }
flate2 = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
camino = { workspace = true }
predicates = "3"

[lints]
workspace = true
