[package]
name = "cabin-port"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Foundation-port recipe parser and source-preparation pipeline for Cabin."

[dependencies]
cabin-artifact = { workspace = true }
cabin-core = { workspace = true }
cabin-manifest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

