[package]
name = "cabinpkg-port"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Foundation-port recipe layer for Cabin"

[lib]
name = "cabin_port"

[dependencies]
cabin-artifact = { workspace = true }
cabin-core = { workspace = true }
cabin-fs = { workspace = true }
cabin-manifest = { workspace = true }
camino = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[lints]
workspace = true
