[package]
name = "cabin-publish"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Publish-workflow orchestration for Cabin."

[dependencies]
cabin-core = { workspace = true }
cabin-package = { workspace = true }
cabin-registry-file = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
predicates = "3"

